--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,9 +8,9 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://10.32.5.201:3306/ewsdOA?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc_username=test
-jdbc_password=123456
+jdbc_url=jdbc:mysql://141.168.1.198:3306/ewsdOA?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc_username=root
+jdbc_password=oracle
 
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #driverClassName=net.sourceforge.jtds.jdbc.Driver
